# linscript

./: .gitattributes  .gitignore  Cargo.toml  README.md  SECURITY.md  setup  setup.sh  setup.sh.x.c  toolbox
.github/workflows/: github-pages.yml  rust.yml  update-badge.yml  update-readme.yml
script/: linuxkit.sh
src/: main.rs
toolbox/: Cargo.toml
toolbox/src/: main.rs
