[package]
name = "toolbox"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.19.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
colored = "2.0"
mio = "0.8.11"
dirs = "4.0"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

